[package]
authors = ["Elijah Hampton <Elijahhamptonj@proton.me>"]
description = "Example use of the WebRTC transport in a browser wasm environment"
edition.workspace = true
license = "MIT"
name = "browser-to-browser-webrtc-example"
publish = false
repository = "https://github.com/libp2p/rust-libp2p"
rust-version = { workspace = true }
version = "0.1.0"

[package.metadata.release]
release = false

[lib]
crate-type = ["cdylib"]

[dependencies]
futures = { workspace = true, default-features = false }
libp2p-identity = "0.2"
libp2p-webrtc-utils = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["RtcPeerConnection", "RtcDataChannel", "RtcConfiguration", "Window", "Navigator", "MediaDevices"] }
js-sys = "0.3"
libp2p-core = { workspace = true, default-features = false }
console_error_panic_hook = "0.1"
tracing-wasm = "0.2"
libp2p-webrtc-browser = { workspace = true }
getrandom = { version = "0.2", features = ["js"] }

[dependencies.libp2p]
path = "../../libp2p"
default-features = false
features = ["wasm-bindgen", "ed25519"]

[patch.crates-io]
mio = { version = "1.0.3", optional = true }
polling = { version = "3.7.4", optional = true }
if-addrs = { version = "0.10.2", optional = true }
errno = { version = "0.3.11", optional = true }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1