[package]
authors = ["Elijah Hampton <Elijahhamptonj@proton.me>"]
categories = ["asynchronous", "network-programming", "wasm", "web-programming"]
description = "WebRTC for libp2p under WASM environment"
edition.workspace = true
keywords = ["libp2p", "networking", "peer-to-peer"]
license = "MIT"
name = "libp2p-webrtc-browser"
repository = "https://github.com/libp2p/rust-libp2p"
rust-version = { workspace = true }
version = "0.1.0"
publish = true

[build-dependencies]
prost-build = "0.13.5"

[dependencies]
bytes = "1"
futures = { workspace = true }
futures-timer = "3"
js-sys = { version = "0.3" }
libp2p-core = { workspace = true }
hex = "0.4.3"
libp2p-relay = { workspace = true }
libp2p-identity = { workspace = true }
libp2p-webrtc-utils = { workspace = true }
libp2p-websocket-websys = { workspace = true }
libp2p-webrtc-websys = { workspace = true }
libp2p-noise = { workspace = true }
libp2p-yamux = { workspace = true }
libp2p-swarm = { workspace = true }
thiserror = { workspace = true }
send_wrapper = { version = "0.6.0", features = ["futures"] }
tracing = { workspace = true }
multistream-select = { workspace = true }
wasm-bindgen = { version = "0.2.90" }
wasm-bindgen-futures = { version = "0.4.42" }
web-sys = { version = "0.3.70", features = [
  "RtcPeerConnection",
  "RtcConfiguration",
  "RtcSessionDescription",
  "RtcSessionDescriptionInit", 
  "RtcSdpType",
  "RtcDataChannel",
  "RtcDataChannelEvent",
  "RtcDataChannelInit",
  "RtcDataChannelState",
  "RtcDataChannelType",
  "RtcIceConnectionState",
  "RtcIceGatheringState",
  "RtcIceCandidate",
  "RtcIceCandidateInit",
  "RtcPeerConnectionIceEvent",
  "Event",
  "EventTarget",
  "MessageEvent",
  "Window",
  "Document",
  "Navigator",
  "RtcCertificate",
  "RtcPeerConnectionState",
  "RtcSignalingState",
  "Location",
  "HtmlDocument",
  "WebSocket"
]}
quick-protobuf = "0.8"
quick-protobuf-codec = { workspace = true }
prost = "0.13.5"
tracing-wasm = "0.2.1"
getrandom = { version = "0.2.15", features = ["js"] }
asynchronous-codec.workspace = true

[lints]
workspace = true

[lib]
crate-type = ["cdylib", "rlib"]
